--- a/blog.html
+++ b/blog.html
@@ -1,6 +1,6 @@
 ---
-layout: layout
+layout: plantillablog
 title: Página de blog
 permalink: /blog
 ---
-{{ https://github.com/organizacion-sesion-3-Victor-Escribano/plantilla-jekyll/blob/master/_layouts/plantillablog.html }}
+Página blog
